# serializer version: 1
# name: test_number_empty[zoe_40][number.reg_zoe_40_minimum_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Minimum charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_min',
    'unique_id': 'vf1zoe40vin_charge_limit_min',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_empty[zoe_40][number.reg_zoe_40_minimum_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Minimum charge level',
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_number_empty[zoe_40][number.reg_zoe_40_target_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Target charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_target',
    'unique_id': 'vf1zoe40vin_charge_limit_target',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_empty[zoe_40][number.reg_zoe_40_target_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Target charge level',
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_number_errors[zoe_40][number.reg_zoe_40_minimum_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Minimum charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_min',
    'unique_id': 'vf1zoe40vin_charge_limit_min',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_errors[zoe_40][number.reg_zoe_40_minimum_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Minimum charge level',
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number_errors[zoe_40][number.reg_zoe_40_target_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Target charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_target',
    'unique_id': 'vf1zoe40vin_charge_limit_target',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_errors[zoe_40][number.reg_zoe_40_target_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Target charge level',
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_numbers[zoe_40][number.reg_zoe_40_minimum_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Minimum charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_min',
    'unique_id': 'vf1zoe40vin_charge_limit_min',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[zoe_40][number.reg_zoe_40_minimum_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Minimum charge level',
      'max': 45,
      'min': 15,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_minimum_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_numbers[zoe_40][number.reg_zoe_40_target_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target charge level',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Target charge level',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_limit_target',
    'unique_id': 'vf1zoe40vin_charge_limit_target',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[zoe_40][number.reg_zoe_40_target_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'REG-ZOE-40 Target charge level',
      'max': 100,
      'min': 55,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.reg_zoe_40_target_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
